<resources>
    <string name="app_name">rentcar</string>
    <string name="login">LOGIN</string>
    <string name="create_user">CREA USUARIO</string>
    <string name="password">Contraseña</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="email">Email</string>
    <string name="empresa">Empresa</string>
    <string name="particular">Particular</string>
    <string name="domicilio">Domicilio</string>
    <string name="edad">Edad</string>
    <string name="dni_cif">DNI</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="alquila_el_veh_culo_que_mejor_se_ajusta_a_ti">ALQUILA EL VEHÍCULO QUE MEJOR SE AJUSTA A TI!</string>
    <string name="modificar_reserva">Modificar Reserva</string>
    <string name="borrar_reserva">Borrar Reserva</string>
    <string name="historial">Historial</string>
    <string name="realizar_reserva">Realizar Reserva</string>
    <string name="hora_reserva">Hora Reserva</string>
    <string name="fecha_reserva">Fecha reserva</string>
    <string name="inicio_alquiler">Inicio Alquiler</string>
    <string name="fin_alquiler">Fin Alquiler</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="selecci_n_de_veh_culo">Selección de vehículo</string>
    <string name="crear_reserva">Crear reserva</string>
    <string name="franquicia_origen">Franquicia Origen</string>
    <string name="franquicia_destino">Franquicia Destino</string>
    <string name="tarifa">Tarifa</string>
    <string name="calcular_presupuesto">Calcular Presupuesto</string>
    <string name="modelo">Modelo</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="historial_de_facturaci_n">historial de facturación</string>
    <string name="numero_reserva">Número reserva :</string>
    <string name="nombre">Nombre :</string>
    <string name="datos_reserva">Datos reserva</string>
    <string name="tipo_cliente">Tipo cliente :</string>
    <string name="email2">Email :</string>
    <string name="inicio_reserva">Inicio reserva :</string>
    <string name="fin_reserva">Fin reserva :</string>
    <string name="importe">Importe :</string>
    <string name="matricula_veh_culo">Matricula vehículo :</string>
    <string name="autom_tico">Automático (+20€)</string>
    <string name="asientos_calefactables">Asientos calefactables (+10€)</string>
    <string name="techo_panor_mico">Techo panorámico (+5€)</string>
    <string name="version_deportiva">Version deportiva (+15€)</string>
    <string name="navegador_15">Navegador (+15€)</string>
    <string name="control_crucero_10">Control crucero (+10€)</string>
    <string name="sensores_aparcamiento_5">Sensores aparcamiento (+5€)</string>
    <string name="navegador_10">Navegador (+10€)</string>
    <string name="bluetooth_5">Bluetooth (+5€)</string>
    <string name="aire_acondicionado_15">Aire acondicionado (+15€)</string>
    <string-array name="franquicias">
        <item></item>
        <item>Madrid</item>
        <item>Galicia</item>
        <item>Talavera</item>
    </string-array>
    <string-array name="marcas_coche">
        <item></item>
        <item>Porsche</item>
        <item>Seat</item>
        <item>Dacia</item>
    </string-array>
    <string name="title_activity_a_c_t_5__e_d_i_t_a_r__p_e_r_f_i_l__u_s_u_a_r_i_o">
        ACT_5_EDITAR_PERFIL_USUARIO
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="nombre1">Nombre</string>
    <string name="email3">Email</string>
    <string name="edad3">Edad</string>
    <string name="domicilio3">Domicilio</string>
    <string name="dni3">DNI</string>
    <string name="recalcular_presupuesto">Recalcular presupuesto</string>
</resources>