<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ACT_5_EDITAR_PERFIL_USUARIO">

    <Button
        android:id="@+id/btn_ACT_5_EDITAR_PERFIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:text="@string/guardar_cambios"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <RadioGroup
        android:id="@+id/rg_ACT_5_EDITAR_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_particular_ACT_5_EDITAR_PERFIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/particular"
            android:textStyle="bold"
            android:textColor="@color/orange"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="425dp" />

        <RadioButton
            android:id="@+id/rb_empresa_ACT_5_EDITAR_PERFIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empresa"
            android:textStyle="bold"
            android:textColor="@color/orange"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="473dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_nombre_ACT_5_EDITAR_PERFIL"
        android:layout_width="74dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/nombre1"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nombre_ACT_5_EDITAR_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_email_ACT_5_EDITAR_PERFIL"
        android:layout_width="74dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/email3"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <EditText
        android:id="@+id/edt_email_ACT_5_EDITAR_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_edad_ACT_5_EDITAR_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/edad3"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <EditText
        android:id="@+id/edt_edad_ACT_5_EDITAR_PERFIL"
        android:layout_width="65dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <TextView
        android:id="@+id/tv_domicilio_ACT_5_EDITAR_PERFIL"
        android:layout_width="74dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/domicilio3"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_edad_ACT_5_EDITAR_PERFIL"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <EditText
        android:id="@+id/edt_domicilio_ACT_5_EDITAR_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_dni_ACT_5_EDITAR_PERFIL"
        android:layout_width="74dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="88dp"
        android:text="@string/dni3"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_domicilio_ACT_5_EDITAR_PERFIL"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/edt_dni_ACT_5_EDITAR_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        android:autofillHints="" />

    <ProgressBar
        android:id="@+id/pb_ACT_5_EDITAR_PERFIL"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_ACT_5_EDITAR_PERFIL"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

</androidx.constraintlayout.widget.ConstraintLayout>